perhaps  fix for too large pics on jsonbin

--- a/src/App.css
+++ b/src/App.css
@@ -61,6 +61,11 @@
   aspect-ratio: 4/3;
 }
 
+canvas {
+  width: 220px;
+  height: 140px;
+}
+
 .deletePhoto {
   position: absolute;
   top: 10px;
